New Alert and Role Page and Actions

--- a/MegProject.Web/Views/Shared/_Layout.cshtml
+++ b/MegProject.Web/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     @Scripts.Render("~/bundles/modernizr")
     @Styles.Render("~/bundles/Select2Css")
     @Styles.Render("~/bundles/BootstrapValidatorCss")
+    @Styles.Render("~/bundles/JqueryConfirmCss")
 
 </head>
 <body>
@@ -64,6 +65,7 @@
     @Scripts.Render("~/bundles/project")
     @Scripts.Render("~/bundles/Select2Js")
     @Scripts.Render("~/bundles/BootstrapValidatorJs")
+    @Scripts.Render("~/bundles/JqueryConfirmJs")
     @RenderSection("scripts", required: false)
 </body>
 </html>
