Moving ViewModels and Editing GenericRepository, UnitOfWork and Views for Models

--- a/MegProject.Web/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/MegProject.Web/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model MegProject.Web.Models.ExternalLoginConfirmationViewModel
+﻿@model MegProject.Dto.ViewModels.AccountViewModels.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
 }
