--- a/MegProject.Web/Views/Account/Login.cshtml
+++ b/MegProject.Web/Views/Account/Login.cshtml
@@ -1,5 +1,6 @@
-﻿@using MegProject.Web.Models
-@model LoginViewModel
+﻿
+@using MegProject.Dto.ViewModels.AccountViewModels
+@model  MegProject.Dto.ViewModels.AccountViewModels.LoginViewModel
 @{
     ViewBag.Title = "Log in";
 }
