--- a/MegProject.Web/Views/Account/Register.cshtml
+++ b/MegProject.Web/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model MegProject.Web.Models.RegisterViewModel
+﻿@model MegProject.Dto.ViewModels.AccountViewModels.RegisterViewModel
 @{
     ViewBag.Title = "Register";
 }
