--- a/MegProject.Web/Views/Account/ResetPassword.cshtml
+++ b/MegProject.Web/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model MegProject.Web.Models.ResetPasswordViewModel
+﻿@model MegProject.Dto.ViewModels.AccountViewModels.ResetPasswordViewModel
 @{
     ViewBag.Title = "Reset password";
 }
