--- a/MegProject.Web/Views/Account/SendCode.cshtml
+++ b/MegProject.Web/Views/Account/SendCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model MegProject.Web.Models.SendCodeViewModel
+﻿@model MegProject.Dto.ViewModels.AccountViewModels.SendCodeViewModel
 @{
     ViewBag.Title = "Send";
 }
