--- a/MegProject.Web/Views/Account/VerifyCode.cshtml
+++ b/MegProject.Web/Views/Account/VerifyCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model MegProject.Web.Models.VerifyCodeViewModel
+﻿@model MegProject.Dto.ViewModels.AccountViewModels.VerifyCodeViewModel
 @{
     ViewBag.Title = "Verify";
 }
