--- a/MegProject.Web/Views/Login/Index.cshtml
+++ b/MegProject.Web/Views/Login/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model MegProject.Dto.CustomDto.ViewModels.LoginViewModel
+﻿@model MegProject.Dto.ViewModels.AccountViewModels.LoginViewModel
 
 @{
     Layout = null;
