--- a/MegProject.Web/Views/Manage/AddPhoneNumber.cshtml
+++ b/MegProject.Web/Views/Manage/AddPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model MegProject.Web.Models.AddPhoneNumberViewModel
+﻿@model MegProject.Dto.ViewModels.AccountViewModels.AddPhoneNumberViewModel
 @{
     ViewBag.Title = "Phone Number";
 }
