--- a/MegProject.Web/Views/Manage/ChangePassword.cshtml
+++ b/MegProject.Web/Views/Manage/ChangePassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model MegProject.Web.Models.ChangePasswordViewModel
+﻿@model MegProject.Dto.ViewModels.AccountViewModels.ChangePasswordViewModel
 @{
     ViewBag.Title = "Change Password";
 }
