--- a/MegProject.Web/Views/Manage/Index.cshtml
+++ b/MegProject.Web/Views/Manage/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model MegProject.Web.Models.IndexViewModel
+﻿@model MegProject.Dto.ViewModels.AccountViewModels.IndexViewModel
 @{
     ViewBag.Title = "Manage";
 }
