--- a/MegProject.Web/Views/Manage/SetPassword.cshtml
+++ b/MegProject.Web/Views/Manage/SetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model MegProject.Web.Models.SetPasswordViewModel
+﻿@model MegProject.Dto.ViewModels.AccountViewModels.SetPasswordViewModel
 @{
     ViewBag.Title = "Create Password";
 }
