--- a/MegProject.Web/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/MegProject.Web/Views/Manage/VerifyPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model MegProject.Web.Models.VerifyPhoneNumberViewModel
+﻿@model MegProject.Dto.ViewModels.AccountViewModels.VerifyPhoneNumberViewModel
 @{
     ViewBag.Title = "Verify Phone Number";
 }
