--- a/MegProject.Web/Views/Account/ForgotPassword.cshtml
+++ b/MegProject.Web/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model MegProject.Web.Models.ForgotPasswordViewModel
+﻿@model MegProject.Dto.ViewModels.AccountViewModels.ForgotPasswordViewModel
 @{
     ViewBag.Title = "Forgot your password?";
 }
