--- a/MegProject.Web/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/MegProject.Web/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model MegProject.Web.Models.ExternalLoginListViewModel
+﻿@model MegProject.Dto.ViewModels.AccountViewModels.ExternalLoginListViewModel
 @using Microsoft.Owin.Security
 
 <h4>Use another service to log in.</h4>
