--- a/MegProject.Web/Views/Manage/ManageLogins.cshtml
+++ b/MegProject.Web/Views/Manage/ManageLogins.cshtml
@@ -1,4 +1,4 @@
-﻿@model MegProject.Web.Models.ManageLoginsViewModel
+﻿@model MegProject.Dto.ViewModels.AccountViewModels.ManageLoginsViewModel
 @using Microsoft.Owin.Security
 @{
     ViewBag.Title = "Manage your external logins";
